--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,48 +1,91 @@
-{
-  // Visit https://aka.ms/tsconfig to read more about this file
-  "compilerOptions": {
-    // File Layout
-    "rootDir": "./src",
-    "outDir": "./dist",
+// // {
+// //   // Visit https://aka.ms/tsconfig to read more about this file
+// //   "compilerOptions": {
+// //     // File Layout
+// //     "rootDir": "./src",
+// //     "outDir": "./dist",
 
-    // Environment Settings
-    // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
-    "target": "es2020",
-    "types": [],
-    // For nodejs:
-    "lib": ["es2020"],
-    // "types": ["node"],
-    // and npm install -D @types/node
+// //     // Environment Settings
+// //     // See also https://aka.ms/tsconfig/module
+// //     "module": "nodenext",
+// //     "target": "es2020",
+// //     "types": [],
+// //     // For nodejs:
+// //     "lib": ["es2020"],
+// //     // "types": ["node"],
+// //     // and npm install -D @types/node
 
-    // Other Outputs
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
+// //     // Other Outputs
+// //     "sourceMap": true,
+// //     "declaration": true,
+// //     "declarationMap": true,
 
-    // Stricter Typechecking Options
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
+// //     // Stricter Typechecking Options
+// //     "noUncheckedIndexedAccess": true,
+// //     "exactOptionalPropertyTypes": true,
 
-    // Style Options
-    // "noImplicitReturns": true,
-    // "noImplicitOverride": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // "noFallthroughCasesInSwitch": true,
-    // "noPropertyAccessFromIndexSignature": true,
+// //     // Style Options
+// //     // "noImplicitReturns": true,
+// //     // "noImplicitOverride": true,
+// //     // "noUnusedLocals": true,
+// //     // "noUnusedParameters": true,
+// //     // "noFallthroughCasesInSwitch": true,
+// //     // "noPropertyAccessFromIndexSignature": true,
 
-    // Recommended Options
-    "strict": true,
-    "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
-    "isolatedModules": true,
-    "noUncheckedSideEffectImports": true,
-    "moduleDetection": "force",
-    "skipLibCheck": true,
-    "esModuleInterop":true,
+// //     // Recommended Options
+// //     "strict": true,
+// //     "jsx": "react-jsx",
+// //     "verbatimModuleSyntax": true,
+// //     "isolatedModules": true,
+// //     "noUncheckedSideEffectImports": true,
+// //     "moduleDetection": "force",
+// //     "skipLibCheck": true,
+// //     "esModuleInterop":true,
     
-  },
+// //   },
 
-  "include": ["src"]
+// //   "include": ["src"]
+// // }
+
+
+
+// /** @type {import('ts-jest').JestConfigWithTsJest} */
+// module.exports = {
+//   preset: 'ts-jest/presets/default-esm', // ESM + TypeScript
+//   testEnvironment: 'node',
+//   extensionsToTreatAsEsm: ['.ts'],
+//   transform: {
+//     '^.+\\.ts$': [
+//       'ts-jest',
+//       {
+//         useESM: true, // tell ts-jest to handle ESM imports
+//       },
+//     ],
+//   },
+//   moduleNameMapper: {
+//     '^(\\.{1,2}/.*)\\.js$': '$1', // fix path resolution for ESM-style imports
+//   },
+//   testMatch: ['**/tests/**/*.test.ts'], // match your test files
+//   {
+//   "compilerOptions": {
+//     "esModuleInterop": true,
+//     "allowSyntheticDefaultImports": true
+//   }
+// }
+
+// };
+
+{
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "dist"
+  },
+  "include": ["src", "tests"]
 }
