--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.8.0",
+    "aws-sdk-client-mock": "^4.1.0",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
@@ -29,6 +30,7 @@
     "constructs": "^10.4.2",
     "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.2",
+    "tslib": "^2.8.1",
     "zod": "^4.1.12"
   }
 }
